oranj/parser.out
shift/reduce conflict in state 100 resolved as shift.
reduce/reduce conflict in state 162 resolved using rule 19 (list_items -> expression .).
reduce/reduce conflict in state 163 resolved using rule 86 (test_basis -> ident .).
shift/reduce conflict in state 219 resolved as shift.


Unused terminals:

   FN
   WITH
   CLASS
   FINALLY

Grammar

Rule 1     primitive -> DEC
Rule 2     primitive -> STRING
Rule 3     primitive -> INT
Rule 4     primitive -> NIL
Rule 5     primitive -> BOOL
Rule 6     primitive -> INF
Rule 7     ident -> IDENT
Rule 8     literal -> [ list_items ]
Rule 9     literal -> [ list_items , ]
Rule 10    literal -> [ ]
Rule 11    literal -> [ hash_items ]
Rule 12    literal -> [ hash_items , ]
Rule 13    literal -> { list_items }
Rule 14    literal -> { list_items , }
Rule 15    literal -> { hash_items }
Rule 16    literal -> { hash_items , }
Rule 17    literal -> { }
Rule 18    list_items -> list_items , expression
Rule 19    list_items -> expression
Rule 20    hash_items -> hash_items , primitive : expression
Rule 21    hash_items -> hash_items , ident : expression
Rule 22    hash_items -> primitive : expression
Rule 23    hash_items -> ident : expression
Rule 24    test_or -> test_or OR test_and
Rule 25    test_or -> test_and
Rule 26    test_and -> test_and AND test_not
Rule 27    test_and -> test_not
Rule 28    test_not -> NOT test_in
Rule 29    test_not -> test_in
Rule 30    test_in -> test_in IN test_type
Rule 31    test_in -> test_in NOT IN test_type
Rule 32    test_in -> test_in | test_type
Rule 33    test_in -> test_type
Rule 34    test_type -> test_type IS test_comp
Rule 35    test_type -> test_type IS NOT test_comp
Rule 36    test_type -> test_comp
Rule 37    test_comp -> test_comp < test_io
Rule 38    test_comp -> test_comp LE test_io
Rule 39    test_comp -> test_comp > test_io
Rule 40    test_comp -> test_comp GE test_io
Rule 41    test_comp -> test_comp NE test_io
Rule 42    test_comp -> test_comp EQ test_io
Rule 43    test_comp -> test_io
Rule 44    test_io -> test_io LTLT test_pm
Rule 45    test_io -> test_io GTGT test_pm
Rule 46    test_io -> test_pm
Rule 47    test_pm -> test_pm + test_mdmf
Rule 48    test_pm -> test_pm - test_mdmf
Rule 49    test_pm -> test_mdmf
Rule 50    test_mdmf -> test_mdmf * test_un
Rule 51    test_mdmf -> test_mdmf / test_un
Rule 52    test_mdmf -> test_mdmf SLASHSLASH test_un
Rule 53    test_mdmf -> test_mdmf MOD test_un
Rule 54    test_mdmf -> test_un
Rule 55    test_un -> test_un PLUSPLUS
Rule 56    test_un -> test_un MINUSMINUS
Rule 57    test_un -> - test_un
Rule 58    test_un -> + test_un
Rule 59    test_un -> test_exp
Rule 60    test_exp -> test_call ^ test_exp
Rule 61    test_exp -> test_call
Rule 62    test_call -> test_call ( arglist )
Rule 63    test_call -> test_call ( arglist , )
Rule 64    test_call -> test_attr
Rule 65    arglist -> arglist , arg
Rule 66    arglist -> arg
Rule 67    arglist -> <empty>
Rule 68    arg -> expression
Rule 69    arg -> ident = expression
Rule 70    arg -> * ident
Rule 71    arg -> * * ident
Rule 72    test_attr -> test_attr . test_sub
Rule 73    test_attr -> test_sub
Rule 74    test_sub -> test_sub [ index ]
Rule 75    test_sub -> test_sub [ index , ]
Rule 76    test_sub -> test_basis
Rule 77    index -> index , indice
Rule 78    index -> indice
Rule 79    indice -> expression : expression : expression
Rule 80    indice -> expression : expression
Rule 81    indice -> expression
Rule 82    indice -> DOTDOTDOT
Rule 83    indice -> <empty>
Rule 84    test_basis -> primitive
Rule 85    test_basis -> literal
Rule 86    test_basis -> ident
Rule 87    test_basis -> ( expression )
Rule 88    expression -> test_or
Rule 89    statement -> expression
Rule 90    statement -> var_s
Rule 91    statement -> flow_s
Rule 92    statement -> assert_s
Rule 93    statement -> block_s
Rule 94    statement -> import_s
Rule 95    statement -> assignment
Rule 96    statement -> declaration
Rule 97    assignment -> many_idents EQOP comma_list
Rule 98    declaration -> ident assignment
Rule 99    var_s -> DEL many_idents
Rule 100   var_s -> EXTERN many_idents
Rule 101   many_idents -> many_idents , ident
Rule 102   many_idents -> ident
Rule 103   flow_s -> BREAK flow_item
Rule 104   flow_s -> CONTINUE flow_item
Rule 105   flow_s -> RETURN comma_list
Rule 106   flow_s -> RETURN comma_list ,
Rule 107   flow_s -> THROW flow_item
Rule 108   flow_s -> YIELD comma_list
Rule 109   flow_s -> YIELD comma_list ,
Rule 110   flow_item -> expression
Rule 111   flow_item -> <empty>
Rule 112   comma_list -> comma_list , expression
Rule 113   comma_list -> expression
Rule 114   import_s -> IMPORT import_items
Rule 115   import_s -> IMPORT import_items AS ident
Rule 116   import_items -> ident . import_items
Rule 117   import_items -> ident
Rule 118   import_items -> *
Rule 119   assert_s -> ASSERT expression
Rule 120   assert_s -> ASSERT expression , expression
Rule 121   block_s -> if_s
Rule 122   block_s -> while_s
Rule 123   block_s -> for_s
Rule 124   block_s -> try_s
Rule 125   if_s -> if_if if_elifs else
Rule 126   if_if -> IF expression block
Rule 127   if_elifs -> ELIF expression block if_elifs
Rule 128   if_elifs -> <empty>
Rule 129   else -> ELSE block
Rule 130   else -> <empty>
Rule 131   block -> { statements }
Rule 132   while_s -> WHILE expression block else
Rule 133   while_s -> WHILE block else
Rule 134   for_s -> FOR many_idents IN comma_list block else
Rule 135   try_s -> try_try try_catch else
Rule 136   try_try -> TRY block
Rule 137   try_catch -> CATCH expression block try_catch
Rule 138   try_catch -> CATCH expression AS ident block try_catch
Rule 139   try_catch -> <empty>
Rule 140   statements -> statements NEWLINE
Rule 141   statements -> statements NEWLINE statement
Rule 142   statements -> statement
Rule 143   statements -> <empty>

Terminals, with rules where they appear

(                    : 62 63 87
)                    : 62 63 87
*                    : 50 70 71 71 118
+                    : 47 58
,                    : 9 12 14 16 18 20 21 63 65 75 77 101 106 109 112 120
-                    : 48 57
.                    : 72 116
/                    : 51
:                    : 20 21 22 23 79 79 80
<                    : 37
=                    : 69
>                    : 39
AND                  : 26
AS                   : 115 138
ASSERT               : 119 120
BOOL                 : 5
BREAK                : 103
CATCH                : 137 138
CLASS                : 
CONTINUE             : 104
DEC                  : 1
DEL                  : 99
DOTDOTDOT            : 82
ELIF                 : 127
ELSE                 : 129
EQ                   : 42
EQOP                 : 97
EXTERN               : 100
FINALLY              : 
FN                   : 
FOR                  : 134
GE                   : 40
GTGT                 : 45
IDENT                : 7
IF                   : 126
IMPORT               : 114 115
IN                   : 30 31 134
INF                  : 6
INT                  : 3
IS                   : 34 35
LE                   : 38
LTLT                 : 44
MINUSMINUS           : 56
MOD                  : 53
NE                   : 41
NEWLINE              : 140 141
NIL                  : 4
NOT                  : 28 31 35
OR                   : 24
PLUSPLUS             : 55
RETURN               : 105 106
SLASHSLASH           : 52
STRING               : 2
THROW                : 107
TRY                  : 136
WHILE                : 132 133
WITH                 : 
YIELD                : 108 109
[                    : 8 9 10 11 12 74 75
]                    : 8 9 10 11 12 74 75
^                    : 60
error                : 
{                    : 13 14 15 16 17 131
|                    : 32
}                    : 13 14 15 16 17 131

Nonterminals, with rules where they appear

arg                  : 65 66
arglist              : 62 63 65
assert_s             : 92
assignment           : 95 98
block                : 126 127 129 132 133 134 136 137 138
block_s              : 93
comma_list           : 97 105 106 108 109 112 134
declaration          : 96
else                 : 125 132 133 134 135
expression           : 18 19 20 21 22 23 68 69 79 79 79 80 80 81 87 89 110 112 113 119 120 120 126 127 132 137 138
flow_item            : 103 104 107
flow_s               : 91
for_s                : 123
hash_items           : 11 12 15 16 20 21
ident                : 21 23 69 70 71 86 98 101 102 115 116 117 138
if_elifs             : 125 127
if_if                : 125
if_s                 : 121
import_items         : 114 115 116
import_s             : 94
index                : 74 75 77
indice               : 77 78
list_items           : 8 9 13 14 18
literal              : 85
many_idents          : 97 99 100 101 134
primitive            : 20 22 84
statement            : 141 142
statements           : 131 140 141 0
test_and             : 24 25 26
test_attr            : 64 72
test_basis           : 76
test_call            : 60 61 62 63
test_comp            : 34 35 36 37 38 39 40 41 42
test_exp             : 59 60
test_in              : 28 29 30 31 32
test_io              : 37 38 39 40 41 42 43 44 45
test_mdmf            : 47 48 49 50 51 52 53
test_not             : 26 27
test_or              : 24 88
test_pm              : 44 45 46 47 48
test_sub             : 72 73 74 75
test_type            : 30 31 32 33 34 35
test_un              : 50 51 52 53 54 55 56 57 58
try_catch            : 135 137 138
try_s                : 124
try_try              : 135
var_s                : 90
while_s              : 122


Parsing method: LALR


state 0

    (0) S' -> . statements
    (140) statements -> . statements NEWLINE
    (141) statements -> . statements NEWLINE statement
    (142) statements -> . statement
    (143) statements -> .
    (89) statement -> . expression
    (90) statement -> . var_s
    (91) statement -> . flow_s
    (92) statement -> . assert_s
    (93) statement -> . block_s
    (94) statement -> . import_s
    (95) statement -> . assignment
    (96) statement -> . declaration
    (88) expression -> . test_or
    (99) var_s -> . DEL many_idents
    (100) var_s -> . EXTERN many_idents
    (103) flow_s -> . BREAK flow_item
    (104) flow_s -> . CONTINUE flow_item
    (105) flow_s -> . RETURN comma_list
    (106) flow_s -> . RETURN comma_list ,
    (107) flow_s -> . THROW flow_item
    (108) flow_s -> . YIELD comma_list
    (109) flow_s -> . YIELD comma_list ,
    (119) assert_s -> . ASSERT expression
    (120) assert_s -> . ASSERT expression , expression
    (121) block_s -> . if_s
    (122) block_s -> . while_s
    (123) block_s -> . for_s
    (124) block_s -> . try_s
    (114) import_s -> . IMPORT import_items
    (115) import_s -> . IMPORT import_items AS ident
    (97) assignment -> . many_idents EQOP comma_list
    (98) declaration -> . ident assignment
    (24) test_or -> . test_or OR test_and
    (25) test_or -> . test_and
    (125) if_s -> . if_if if_elifs else
    (132) while_s -> . WHILE expression block else
    (133) while_s -> . WHILE block else
    (134) for_s -> . FOR many_idents IN comma_list block else
    (135) try_s -> . try_try try_catch else
    (101) many_idents -> . many_idents , ident
    (102) many_idents -> . ident
    (7) ident -> . IDENT
    (26) test_and -> . test_and AND test_not
    (27) test_and -> . test_not
    (126) if_if -> . IF expression block
    (136) try_try -> . TRY block
    (28) test_not -> . NOT test_in
    (29) test_not -> . test_in
    (30) test_in -> . test_in IN test_type
    (31) test_in -> . test_in NOT IN test_type
    (32) test_in -> . test_in | test_type
    (33) test_in -> . test_type
    (34) test_type -> . test_type IS test_comp
    (35) test_type -> . test_type IS NOT test_comp
    (36) test_type -> . test_comp
    (37) test_comp -> . test_comp < test_io
    (38) test_comp -> . test_comp LE test_io
    (39) test_comp -> . test_comp > test_io
    (40) test_comp -> . test_comp GE test_io
    (41) test_comp -> . test_comp NE test_io
    (42) test_comp -> . test_comp EQ test_io
    (43) test_comp -> . test_io
    (44) test_io -> . test_io LTLT test_pm
    (45) test_io -> . test_io GTGT test_pm
    (46) test_io -> . test_pm
    (47) test_pm -> . test_pm + test_mdmf
    (48) test_pm -> . test_pm - test_mdmf
    (49) test_pm -> . test_mdmf
    (50) test_mdmf -> . test_mdmf * test_un
    (51) test_mdmf -> . test_mdmf / test_un
    (52) test_mdmf -> . test_mdmf SLASHSLASH test_un
    (53) test_mdmf -> . test_mdmf MOD test_un
    (54) test_mdmf -> . test_un
    (55) test_un -> . test_un PLUSPLUS
    (56) test_un -> . test_un MINUSMINUS
    (57) test_un -> . - test_un
    (58) test_un -> . + test_un
    (59) test_un -> . test_exp
    (60) test_exp -> . test_call ^ test_exp
    (61) test_exp -> . test_call
    (62) test_call -> . test_call ( arglist )
    (63) test_call -> . test_call ( arglist , )
    (64) test_call -> . test_attr
    (72) test_attr -> . test_attr . test_sub
    (73) test_attr -> . test_sub
    (74) test_sub -> . test_sub [ index ]
    (75) test_sub -> . test_sub [ index , ]
    (76) test_sub -> . test_basis
    (84) test_basis -> . primitive
    (85) test_basis -> . literal
    (86) test_basis -> . ident
    (87) test_basis -> . ( expression )
    (1) primitive -> . DEC
    (2) primitive -> . STRING
    (3) primitive -> . INT
    (4) primitive -> . NIL
    (5) primitive -> . BOOL
    (6) primitive -> . INF
    (8) literal -> . [ list_items ]
    (9) literal -> . [ list_items , ]
    (10) literal -> . [ ]
    (11) literal -> . [ hash_items ]
    (12) literal -> . [ hash_items , ]
    (13) literal -> . { list_items }
    (14) literal -> . { list_items , }
    (15) literal -> . { hash_items }
    (16) literal -> . { hash_items , }
    (17) literal -> . { }

    NEWLINE         reduce using rule 143 (statements -> .)
    $end            reduce using rule 143 (statements -> .)
    DEL             shift and go to state 10
    EXTERN          shift and go to state 33
    BREAK           shift and go to state 44
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 9
    THROW           shift and go to state 61
    YIELD           shift and go to state 55
    ASSERT          shift and go to state 48
    IMPORT          shift and go to state 6
    WHILE           shift and go to state 32
    FOR             shift and go to state 16
    IDENT           shift and go to state 15
    IF              shift and go to state 57
    TRY             shift and go to state 18
    NOT             shift and go to state 23
    -               shift and go to state 50
    +               shift and go to state 11
    (               shift and go to state 3
    DEC             shift and go to state 20
    STRING          shift and go to state 53
    INT             shift and go to state 21
    NIL             shift and go to state 7
    BOOL            shift and go to state 45
    INF             shift and go to state 24
    [               shift and go to state 19
    {               shift and go to state 56


    flow_s                         shift and go to state 27
    primitive                      shift and go to state 28
    statements                     shift and go to state 29
    test_and                       shift and go to state 30
    test_mdmf                      shift and go to state 31
    test_exp                       shift and go to state 47
    while_s                        shift and go to state 49
    test_comp                      shift and go to state 34
    import_s                       shift and go to state 35
    try_s                          shift and go to state 1
    for_s                          shift and go to state 2
    test_type                      shift and go to state 36
    assert_s                       shift and go to state 12
    if_s                           shift and go to state 13
    if_if                          shift and go to state 4
    literal                        shift and go to state 37
    test_un                        shift and go to state 5
    statement                      shift and go to state 38
    test_or                        shift and go to state 14
    test_basis                     shift and go to state 51
    test_sub                       shift and go to state 52
    assignment                     shift and go to state 54
    test_call                      shift and go to state 17
    test_io                        shift and go to state 39
    many_idents                    shift and go to state 59
    test_attr                      shift and go to state 58
    declaration                    shift and go to state 41
    test_not                       shift and go to state 43
    try_try                        shift and go to state 26
    ident                          shift and go to state 42
    test_in                        shift and go to state 40
    expression                     shift and go to state 25
    block_s                        shift and go to state 46
    test_pm                        shift and go to state 60
    var_s                          shift and go to state 8

state 1

    (124) block_s -> try_s .

    NEWLINE         reduce using rule 124 (block_s -> try_s .)
    $end            reduce using rule 124 (block_s -> try_s .)
    }               reduce using rule 124 (block_s -> try_s .)



state 2

    (123) block_s -> for_s .

    NEWLINE         reduce using rule 123 (block_s -> for_s .)
    $end            reduce using rule 123 (block_s -> for_s .)
    }               reduce using rule 123 (block_s -> for_s .)



state 3

    (87) test_basis -> ( . expression )
    (88) expression -> . test_or
    (24) test_or -> . test_or OR test_and
    (25) test_or -> . test_and
    (26) test_and -> . test_and AND test_not
    (27) test_and -> . test_not
    (28) test_not -> . NOT test_in
    (29) test_not -> . test_in
    (30) test_in -> . test_in IN test_type
    (31) test_in -> . test_in NOT IN test_type
    (32) test_in -> . test_in | test_type
    (33) test_in -> . test_type
    (34) test_type -> . test_type IS test_comp
    (35) test_type -> . test_type IS NOT test_comp
    (36) test_type -> . test_comp
    (37) test_comp -> . test_comp < test_io
    (38) test_comp -> . test_comp LE test_io
    (39) test_comp -> . test_comp > test_io
    (40) test_comp -> . test_comp GE test_io
    (41) test_comp -> . test_comp NE test_io
    (42) test_comp -> . test_comp EQ test_io
    (43) test_comp -> . test_io
    (44) test_io -> . test_io LTLT test_pm
    (45) test_io -> . test_io GTGT test_pm
    (46) test_io -> . test_pm
    (47) test_pm -> . test_pm + test_mdmf
    (48) test_pm -> . test_pm - test_mdmf
    (49) test_pm -> . test_mdmf
    (50) test_mdmf -> . test_mdmf * test_un
    (51) test_mdmf -> . test_mdmf / test_un
    (52) test_mdmf -> . test_mdmf SLASHSLASH test_un
    (53) test_mdmf -> . test_mdmf MOD test_un
    (54) test_mdmf -> . test_un
    (55) test_un -> . test_un PLUSPLUS
    (56) test_un -> . test_un MINUSMINUS
    (57) test_un -> . - test_un
    (58) test_un -> . + test_un
    (59) test_un -> . test_exp
    (60) test_exp -> . test_call ^ test_exp
    (61) test_exp -> . test_call
    (62) test_call -> . test_call ( arglist )
    (63) test_call -> . test_call ( arglist , )
    (64) test_call -> . test_attr
    (72) test_attr -> . test_attr . test_sub
    (73) test_attr -> . test_sub
    (74) test_sub -> . test_sub [ index ]
    (75) test_sub -> . test_sub [ index , ]
    (76) test_sub -> . test_basis
    (84) test_basis -> . primitive
    (85) test_basis -> . literal
    (86) test_basis -> . ident
    (87) test_basis -> . ( expression )
    (1) primitive -> . DEC
    (2) primitive -> . STRING
    (3) primitive -> . INT
    (4) primitive -> . NIL
    (5) primitive -> . BOOL
    (6) primitive -> . INF
    (8) literal -> . [ list_items ]
    (9) literal -> . [ list_items , ]
    (10) literal -> . [ ]
    (11) literal -> . [ hash_items ]
    (12) literal -> . [ hash_items , ]
    (13) literal -> . { list_items }
    (14) literal -> . { list_items , }
    (15) literal -> . { hash_items }
    (16) literal -> . { hash_items , }
    (17) literal -> . { }
    (7) ident -> . IDENT

    NOT             shift and go to state 23
    -               shift and go to state 50
    +               shift and go to state 11
    (               shift and go to state 3
    DEC             shift and go to state 20
    STRING          shift and go to state 53
    INT             shift and go to state 21
    NIL             shift and go to state 7
    BOOL            shift and go to state 45
    INF             shift and go to state 24
    [               shift and go to state 19
    {               shift and go to state 56
    IDENT           shift and go to state 15


    primitive                      shift and go to state 28
    test_exp                       shift and go to state 47
    test_and                       shift and go to state 30
    test_mdmf                      shift and go to state 31
    test_comp                      shift and go to state 34
    test_type                      shift and go to state 36
    literal                        shift and go to state 37
    test_un                        shift and go to state 5
    test_or                        shift and go to state 14
    test_basis                     shift and go to state 51
    test_sub                       shift and go to state 52
    test_call                      shift and go to state 17
    test_io                        shift and go to state 39
    test_in                        shift and go to state 40
    test_attr                      shift and go to state 58
    test_not                       shift and go to state 43
    ident                          shift and go to state 62
    test_pm                        shift and go to state 60
    expression                     shift and go to state 63

state 4

    (125) if_s -> if_if . if_elifs else
    (127) if_elifs -> . ELIF expression block if_elifs
    (128) if_elifs -> .

    ELIF            shift and go to state 64
    ELSE            reduce using rule 128 (if_elifs -> .)
    NEWLINE         reduce using rule 128 (if_elifs -> .)
    $end            reduce using rule 128 (if_elifs -> .)
    }               reduce using rule 128 (if_elifs -> .)


    if_elifs                       shift and go to state 65

state 5

    (54) test_mdmf -> test_un .
    (55) test_un -> test_un . PLUSPLUS
    (56) test_un -> test_un . MINUSMINUS

    *               reduce using rule 54 (test_mdmf -> test_un .)
    /               reduce using rule 54 (test_mdmf -> test_un .)
    SLASHSLASH      reduce using rule 54 (test_mdmf -> test_un .)
    MOD             reduce using rule 54 (test_mdmf -> test_un .)
    +               reduce using rule 54 (test_mdmf -> test_un .)
    -               reduce using rule 54 (test_mdmf -> test_un .)
    LTLT            reduce using rule 54 (test_mdmf -> test_un .)
    GTGT            reduce using rule 54 (test_mdmf -> test_un .)
    <               reduce using rule 54 (test_mdmf -> test_un .)
    LE              reduce using rule 54 (test_mdmf -> test_un .)
    >               reduce using rule 54 (test_mdmf -> test_un .)
    GE              reduce using rule 54 (test_mdmf -> test_un .)
    NE              reduce using rule 54 (test_mdmf -> test_un .)
    EQ              reduce using rule 54 (test_mdmf -> test_un .)
    IS              reduce using rule 54 (test_mdmf -> test_un .)
    IN              reduce using rule 54 (test_mdmf -> test_un .)
    NOT             reduce using rule 54 (test_mdmf -> test_un .)
    |               reduce using rule 54 (test_mdmf -> test_un .)
    AND             reduce using rule 54 (test_mdmf -> test_un .)
    OR              reduce using rule 54 (test_mdmf -> test_un .)
    ,               reduce using rule 54 (test_mdmf -> test_un .)
    {               reduce using rule 54 (test_mdmf -> test_un .)
    NEWLINE         reduce using rule 54 (test_mdmf -> test_un .)
    $end            reduce using rule 54 (test_mdmf -> test_un .)
    )               reduce using rule 54 (test_mdmf -> test_un .)
    }               reduce using rule 54 (test_mdmf -> test_un .)
    ]               reduce using rule 54 (test_mdmf -> test_un .)
    AS              reduce using rule 54 (test_mdmf -> test_un .)
    :               reduce using rule 54 (test_mdmf -> test_un .)
    PLUSPLUS        shift and go to state 66
    MINUSMINUS      shift and go to state 67



state 6

    (114) import_s -> IMPORT . import_items
    (115) import_s -> IMPORT . import_items AS ident
    (116) import_items -> . ident . import_items
    (117) import_items -> . ident
    (118) import_items -> . *
    (7) ident -> . IDENT

    *               shift and go to state 70
    IDENT           shift and go to state 15


    import_items                   shift and go to state 69
    ident                          shift and go to state 68

state 7

    (4) primitive -> NIL .

    [               reduce using rule 4 (primitive -> NIL .)
    .               reduce using rule 4 (primitive -> NIL .)
    ^               reduce using rule 4 (primitive -> NIL .)
    (               reduce using rule 4 (primitive -> NIL .)
    PLUSPLUS        reduce using rule 4 (primitive -> NIL .)
    MINUSMINUS      reduce using rule 4 (primitive -> NIL .)
    *               reduce using rule 4 (primitive -> NIL .)
    /               reduce using rule 4 (primitive -> NIL .)
    SLASHSLASH      reduce using rule 4 (primitive -> NIL .)
    MOD             reduce using rule 4 (primitive -> NIL .)
    +               reduce using rule 4 (primitive -> NIL .)
    -               reduce using rule 4 (primitive -> NIL .)
    LTLT            reduce using rule 4 (primitive -> NIL .)
    GTGT            reduce using rule 4 (primitive -> NIL .)
    <               reduce using rule 4 (primitive -> NIL .)
    LE              reduce using rule 4 (primitive -> NIL .)
    >               reduce using rule 4 (primitive -> NIL .)
    GE              reduce using rule 4 (primitive -> NIL .)
    NE              reduce using rule 4 (primitive -> NIL .)
    EQ              reduce using rule 4 (primitive -> NIL .)
    IS              reduce using rule 4 (primitive -> NIL .)
    IN              reduce using rule 4 (primitive -> NIL .)
    NOT             reduce using rule 4 (primitive -> NIL .)
    |               reduce using rule 4 (primitive -> NIL .)
    AND             reduce using rule 4 (primitive -> NIL .)
    OR              reduce using rule 4 (primitive -> NIL .)
    ,               reduce using rule 4 (primitive -> NIL .)
    {               reduce using rule 4 (primitive -> NIL .)
    NEWLINE         reduce using rule 4 (primitive -> NIL .)
    $end            reduce using rule 4 (primitive -> NIL .)
    )               reduce using rule 4 (primitive -> NIL .)
    }               reduce using rule 4 (primitive -> NIL .)
    ]               reduce using rule 4 (primitive -> NIL .)
    AS              reduce using rule 4 (primitive -> NIL .)
    :               reduce using rule 4 (primitive -> NIL .)



state 8

    (90) statement -> var_s .

    NEWLINE         reduce using rule 90 (statement -> var_s .)
    $end            reduce using rule 90 (statement -> var_s .)
    }               reduce using rule 90 (statement -> var_s .)



state 9

    (105) flow_s -> RETURN . comma_list
    (106) flow_s -> RETURN . comma_list ,
    (112) comma_list -> . comma_list , expression
    (113) comma_list -> . expression
    (88) expression -> . test_or
    (24) test_or -> . test_or OR test_and
    (25) test_or -> . test_and
    (26) test_and -> . test_and AND test_not
    (27) test_and -> . test_not
    (28) test_not -> . NOT test_in
    (29) test_not -> . test_in
    (30) test_in -> . test_in IN test_type
    (31) test_in -> . test_in NOT IN test_type
    (32) test_in -> . test_in | test_type
    (33) test_in -> . test_type
    (34) test_type -> . test_type IS test_comp
    (35) test_type -> . test_type IS NOT test_comp
    (36) test_type -> . test_comp
    (37) test_comp -> . test_comp < test_io
    (38) test_comp -> . test_comp LE test_io
    (39) test_comp -> . test_comp > test_io
    (40) test_comp -> . test_comp GE test_io
    (41) test_comp -> . test_comp NE test_io
    (42) test_comp -> . test_comp EQ test_io
    (43) test_comp -> . test_io
    (44) test_io -> . test_io LTLT test_pm
    (45) test_io -> . test_io GTGT test_pm
    (46) test_io -> . test_pm
    (47) test_pm -> . test_pm + test_mdmf
    (48) test_pm -> . test_pm - test_mdmf
    (49) test_pm -> . test_mdmf
    (50) test_mdmf -> . test_mdmf * test_un
    (51) test_mdmf -> . test_mdmf / test_un
    (52) test_mdmf -> . test_mdmf SLASHSLASH test_un
    (53) test_mdmf -> . test_mdmf MOD test_un
    (54) test_mdmf -> . test_un
    (55) test_un -> . test_un PLUSPLUS
    (56) test_un -> . test_un MINUSMINUS
    (57) test_un -> . - test_un
    (58) test_un -> . + test_un
    (59) test_un -> . test_exp
    (60) test_exp -> . test_call ^ test_exp
    (61) test_exp -> . test_call
    (62) test_call -> . test_call ( arglist )
    (63) test_call -> . test_call ( arglist , )
    (64) test_call -> . test_attr
    (72) test_attr -> . test_attr . test_sub
    (73) test_attr -> . test_sub
    (74) test_sub -> . test_sub [ index ]
    (75) test_sub -> . test_sub [ index , ]
    (76) test_sub -> . test_basis
    (84) test_basis -> . primitive
    (85) test_basis -> . literal
    (86) test_basis -> . ident
    (87) test_basis -> . ( expression )
    (1) primitive -> . DEC
    (2) primitive -> . STRING
    (3) primitive -> . INT
    (4) primitive -> . NIL
    (5) primitive -> . BOOL
    (6) primitive -> . INF
    (8) literal -> . [ list_items ]
    (9) literal -> . [ list_items , ]
    (10) literal -> . [ ]
    (11) literal -> . [ hash_items ]
    (12) literal -> . [ hash_items , ]
    (13) literal -> . { list_items }
    (14) literal -> . { list_items , }
    (15) literal -> . { hash_items }
    (16) literal -> . { hash_items , }
    (17) literal -> . { }
    (7) ident -> . IDENT

    NOT             shift and go to state 23
    -               shift and go to state 50
    +               shift and go to state 11
    (               shift and go to state 3
    DEC             shift and go to state 20
    STRING          shift and go to state 53
    INT             shift and go to state 21
    NIL             shift and go to state 7
    BOOL            shift and go to state 45
    INF             shift and go to state 24
    [               shift and go to state 19
    {               shift and go to state 56
    IDENT           shift and go to state 15


    primitive                      shift and go to state 28
    test_exp                       shift and go to state 47
    test_and                       shift and go to state 30
    test_mdmf                      shift and go to state 31
    test_comp                      shift and go to state 34
    test_type                      shift and go to state 36
    literal                        shift and go to state 37
    test_un                        shift and go to state 5
    comma_list                     shift and go to state 71
    test_or                        shift and go to state 14
    test_basis                     shift and go to state 51
    test_sub                       shift and go to state 52
    test_call                      shift and go to state 17
    test_io                        shift and go to state 39
    test_in                        shift and go to state 40
    test_attr                      shift and go to state 58
    test_not                       shift and go to state 43
    ident                          shift and go to state 62
    test_pm                        shift and go to state 60
    expression                     shift and go to state 72

state 10

    (99) var_s -> DEL . many_idents
    (101) many_idents -> . many_idents , ident
    (102) many_idents -> . ident
    (7) ident -> . IDENT

    IDENT           shift and go to state 15


    many_idents                    shift and go to state 73
    ident                          shift and go to state 74

state 11

    (58) test_un -> + . test_un
    (55) test_un -> . test_un PLUSPLUS
    (56) test_un -> . test_un MINUSMINUS
    (57) test_un -> . - test_un
    (58) test_un -> . + test_un
    (59) test_un -> . test_exp
    (60) test_exp -> . test_call ^ test_exp
    (61) test_exp -> . test_call
    (62) test_call -> . test_call ( arglist )
    (63) test_call -> . test_call ( arglist , )
    (64) test_call -> . test_attr
    (72) test_attr -> . test_attr . test_sub
    (73) test_attr -> . test_sub
    (74) test_sub -> . test_sub [ index ]
    (75) test_sub -> . test_sub [ index , ]
    (76) test_sub -> . test_basis
    (84) test_basis -> . primitive
    (85) test_basis -> . literal
    (86) test_basis -> . ident
    (87) test_basis -> . ( expression )
    (1) primitive -> . DEC
    (2) primitive -> . STRING
    (3) primitive -> . INT
    (4) primitive -> . NIL
    (5) primitive -> . BOOL
    (6) primitive -> . INF
    (8) literal -> . [ list_items ]
    (9) literal -> . [ list_items , ]
    (10) literal -> . [ ]
    (11) literal -> . [ hash_items ]
    (12) literal -> . [ hash_items , ]
    (13) literal -> . { list_items }
    (14) literal -> . { list_items , }
    (15) literal -> . { hash_items }
    (16) literal -> . { hash_items , }
    (17) literal -> . { }
    (7) ident -> . IDENT

    -               shift and go to state 50
    +               shift and go to state 11
    (               shift and go to state 3
    DEC             shift and go to state 20
    STRING          shift and go to state 53
    INT             shift and go to state 21
    NIL             shift and go to state 7
    BOOL            shift and go to state 45
    INF             shift and go to state 24
    [               shift and go to state 19
    {               shift and go to state 56
    IDENT           shift and go to state 15


    primitive                      shift and go to state 28
    test_sub                       shift and go to state 52
    test_exp                       shift and go to state 47
    test_basis                     shift and go to state 51
    ident                          shift and go to state 62
    test_call                      shift and go to state 17
    literal                        shift and go to state 37
    test_attr                      shift and go to state 58
    test_un                        shift and go to state 75

state 12

    (92) statement -> assert_s .

    NEWLINE         reduce using rule 92 (statement -> assert_s .)
    $end            reduce using rule 92 (statement -> assert_s .)
    }               reduce using rule 92 (statement -> assert_s .)



state 13

    (121) block_s -> if_s .

    NEWLINE         reduce using rule 121 (block_s -> if_s .)
    $end            reduce using rule 121 (block_s -> if_s .)
    }               reduce using rule 121 (block_s -> if_s .)



state 14

    (88) expression -> test_or .
    (24) test_or -> test_or . OR test_and

    NEWLINE         reduce using rule 88 (expression -> test_or .)
    $end            reduce using rule 88 (expression -> test_or .)
    }               reduce using rule 88 (expression -> test_or .)
    ]               reduce using rule 88 (expression -> test_or .)
    ,               reduce using rule 88 (expression -> test_or .)
    AS              reduce using rule 88 (expression -> test_or .)
    {               reduce using rule 88 (expression -> test_or .)
    )               reduce using rule 88 (expression -> test_or .)
    :               reduce using rule 88 (expression -> test_or .)
    OR              shift and go to state 76



state 15

    (7) ident -> IDENT .
